# backend

./: pyproject.toml
app/core/: dependencies.py  settings.py
app/db/: base.py  session.py
app/models/: task.py  user.py
app/schemas/: task.py  user.py
